// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a AddressEdit 1`] = `
<div class="van-address-edit">
  <div class="van-cell-group van-hairline--top-bottom">
    <div maxlength="15" placeholder="名字" class="van-cell van-hairline van-field">
      <!---->
      <div class="van-cell__title"><span>收货人</span>
        <!---->
      </div>
      <div class="van-cell__value">
        <input type="text" maxlength="15" placeholder="名字" value="" class="van-field__control">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <div placeholder="手机或固定电话" class="van-cell van-hairline van-field">
      <!---->
      <div class="van-cell__title"><span>联系电话</span>
        <!---->
      </div>
      <div class="van-cell__value">
        <input type="tel" placeholder="手机或固定电话" value="" class="van-field__control">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <div class="van-cell van-cell--clickable van-hairline van-address-edit__area">
      <!---->
      <div class="van-cell__title"><span>收件地区</span>
        <!---->
      </div>
      <div class="van-cell__value"><span>选择省份</span> <span>选择城市</span> <span>选择地区</span></div>
      <!---->
    </div>
    <div>
      <div placeholder="如街道、楼层、门牌号等" maxlength="200" rows="1" class="van-cell van-hairline van-field van-field--has-icon">
        <!---->
        <div class="van-cell__title"><span>详细地址</span>
          <!---->
        </div>
        <div class="van-cell__value">
          <textarea placeholder="如街道、楼层、门牌号等" maxlength="200" rows="1" class="van-field__control"></textarea>
          <!---->
          <div class="van-field__icon">
            <div>
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
    <!---->
  </div>
  <div class="van-address-edit__buttons">
    <button class="van-button van-button--primary van-button--normal van-button--block">
      <!----><span class="van-button__text">
      保存
    </span></button>
    <!---->
  </div>
  <div name="popup-slide-bottom" class="van-popup van-popup--bottom" style="display:none;">
    <div class="van-picker van-area">
      <div class="van-hairline--top-bottom van-picker__toolbar">
        <div class="van-picker__cancel">取消</div>
        <!---->
        <div class="van-picker__confirm">确认</div>
      </div>
      <div class="van-picker__loading">
        <div class="van-loading van-loading--circular van-loading--black"><span class="van-loading__spinner van-loading__spinner--circular"> <svg viewBox="25 25 50 50" class="van-loading__circular"><circle cx="50" cy="50" r="20" fill="none"></circle></svg></span></div>
      </div>
      <div class="van-picker__columns" style="height:220px;">
        <div class="van-hairline--top-bottom van-picker__frame" style="height:44px;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`create a AddressEdit with props 1`] = `
<div class="van-address-edit">
  <div class="van-cell-group van-hairline--top-bottom">
    <div maxlength="15" placeholder="名字" class="van-cell van-hairline van-field">
      <!---->
      <div class="van-cell__title"><span>收货人</span>
        <!---->
      </div>
      <div class="van-cell__value">
        <input type="text" maxlength="15" placeholder="名字" value="测试" class="van-field__control">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <div placeholder="手机或固定电话" class="van-cell van-hairline van-field">
      <!---->
      <div class="van-cell__title"><span>联系电话</span>
        <!---->
      </div>
      <div class="van-cell__value">
        <input type="tel" placeholder="手机或固定电话" value="13000000000" class="van-field__control">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <div class="van-cell van-cell--clickable van-hairline van-address-edit__area">
      <!---->
      <div class="van-cell__title"><span>收件地区</span>
        <!---->
      </div>
      <div class="van-cell__value"><span>浙江省</span> <span>杭州市</span> <span>西湖区</span></div>
      <!---->
    </div>
    <div>
      <div placeholder="如街道、楼层、门牌号等" maxlength="200" rows="1" class="van-cell van-hairline van-field van-field--has-icon">
        <!---->
        <div class="van-cell__title"><span>详细地址</span>
          <!---->
        </div>
        <div class="van-cell__value">
          <textarea placeholder="如街道、楼层、门牌号等" maxlength="200" rows="1" class="van-field__control">详细地址</textarea>
          <!---->
          <div class="van-field__icon">
            <div>
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <div placeholder="邮政编码(选填)" maxlength="6" class="van-hairline--top van-cell van-hairline van-field">
      <!---->
      <div class="van-cell__title"><span>邮政编码</span>
        <!---->
      </div>
      <div class="van-cell__value">
        <input type="tel" placeholder="邮政编码(选填)" maxlength="6" value="10000" class="van-field__control">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <div class="van-cell van-cell--center van-switch-cell">
      <!---->
      <div class="van-cell__title"><span>设为默认收货地址</span>
        <!---->
      </div>
      <div class="van-cell__value">
        <div title="设为默认收货地址" class="van-switch van-switch--on" style="font-size:30px;">
          <div class="van-switch__node">
            <!---->
          </div>
        </div>
      </div>
      <!---->
    </div>
  </div>
  <div class="van-address-edit__buttons">
    <button class="van-button van-button--primary van-button--normal van-button--block">
      <!----><span class="van-button__text">
      保存
    </span></button>
    <!---->
  </div>
  <div name="popup-slide-bottom" class="van-popup van-popup--bottom" style="display:none;">
    <div class="van-picker van-area">
      <div class="van-hairline--top-bottom van-picker__toolbar">
        <div class="van-picker__cancel">取消</div>
        <!---->
        <div class="van-picker__confirm">确认</div>
      </div>
      <!---->
      <div class="van-picker__columns" style="height:220px;">
        <div class="van-picker-column" style="height:220px;">
          <ul style="transition:0ms;transform:translate3d(0, 88px, 0);line-height:44px;">
            <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected">选择省份</li>
            <li class="van-ellipsis van-picker-column__item">北京市</li>
          </ul>
        </div>
        <div class="van-picker-column" style="height:220px;">
          <ul style="transition:0ms;transform:translate3d(0, 88px, 0);line-height:44px;">
            <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected">选择城市</li>
            <li class="van-ellipsis van-picker-column__item">北京市</li>
          </ul>
        </div>
        <div class="van-picker-column" style="height:220px;">
          <ul style="transition:0ms;transform:translate3d(0, 88px, 0);line-height:44px;">
            <li class="van-ellipsis van-picker-column__item van-picker-column__item--selected">选择地区</li>
            <li class="van-ellipsis van-picker-column__item">东城区</li>
            <li class="van-ellipsis van-picker-column__item">西城区</li>
            <li class="van-ellipsis van-picker-column__item">朝阳区</li>
            <li class="van-ellipsis van-picker-column__item">丰台区</li>
            <li class="van-ellipsis van-picker-column__item">石景山区</li>
            <li class="van-ellipsis van-picker-column__item">海淀区</li>
            <li class="van-ellipsis van-picker-column__item">门头沟区</li>
            <li class="van-ellipsis van-picker-column__item">房山区</li>
            <li class="van-ellipsis van-picker-column__item">通州区</li>
            <li class="van-ellipsis van-picker-column__item">顺义区</li>
            <li class="van-ellipsis van-picker-column__item">昌平区</li>
            <li class="van-ellipsis van-picker-column__item">大兴区</li>
            <li class="van-ellipsis van-picker-column__item">怀柔区</li>
            <li class="van-ellipsis van-picker-column__item">平谷区</li>
          </ul>
        </div>
        <div class="van-hairline--top-bottom van-picker__frame" style="height:44px;"></div>
      </div>
    </div>
  </div>
</div>
`;
